--- a/src/app/presentation/pages/carrousel/carrousel.component.html
+++ b/src/app/presentation/pages/carrousel/carrousel.component.html
@@ -1,1 +1,12 @@
-<p>carrousel works!</p>
+<tui-carousel>
+  @for (image of images(); track $index) {
+  <div *tuiItem>
+    <img [src]="image" alt="" draggable="false"  />
+  </div>
+  }
+  <tui-pagination
+    size="s"
+    class="tui-pagination"
+    [length]="images().length"
+  ></tui-pagination>
+</tui-carousel>
