--- a/src/app/presentation/shared/components/appbar/appbar.component.less
+++ b/src/app/presentation/shared/components/appbar/appbar.component.less
@@ -3,31 +3,9 @@ tui-app-bar {
   margin-bottom: 1rem;
 }
 
-:host {
+.sidebar {
+  display: flex;
+  flex-flow: column nowrap;
   width: 100%;
-}
-
-.app-bar {
-  background-color: #d9d9d9;
-}
-
-.sidebar-icon-toggle {
-  margin-left: 1em;
-  cursor: pointer;
-}
-
-.nav-link,
-.nav-action {
-  font-size: 1.5em;
-  height: 3em;
-  margin-left: 0.5em;
-}
-
-.nav-label {
-  height: 2em;
-  margin-left: 0.9em;
-}
-
-.page-title {
-  font-size: 1.5em;
+  padding: 2rem 1rem;
 }
